[metadata]
name = dune_client
description = A simple framework for interacting with Dune Analytics official API service.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/cowprotocol/dune-client
author = Benjamin H. Smith
author_email = ben@cow.fi
license = Apache License Version 2.0
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
project_urls =
  Tracker = https://github.com/cowprotocol/dune-client/issues

[options]
zip_safe = False
packages=find:
platforms = any
install_requires =
  duneapi==4.0.0
  types-python-dateutil==2.8.19
  types-PyYAML==6.0.10
  python-dateutil==2.8.2
  python-dotenv==0.20.0
python_requires = >=3.9
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
  tests
  tests.*
  example
  example.*

[options.package_data]
dune_client = py.typed