[metadata]
name = dune_client
description = A simple framework for interacting with Dune Analytics official API service.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/duneanalytics/dune-client
author = Benjamin H. Smith & Dune Analytics
author_email = ben@cow.fi
license = Apache License Version 2.0
license_files = LICENSE
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache Software License
  Operating System :: OS Independent
project_urls =
  Tracker = https://github.com/duneanalytics/dune-client/issues

[options]
zip_safe = False
packages=find:
platforms = any
install_requires =
  aiohttp>=3.8.3
  dataclasses-json>=0.6.4
  types-python-dateutil>=2.8.19
  types-PyYAML>=6.0.11
  types-requests>=2.28.0
  types-Deprecated>=1.2.9.3
  types-setuptools>=68.2.0.0
  python-dateutil>=2.8.2
  requests>=2.28.0
  ndjson>=0.3.1
  Deprecated>=1.2.0
python_requires = >=3.8
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
  tests
  tests.*
  example
  example.*

[options.package_data]
dune_client = py.typed
